--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=ReVerb
+author=Wool Scarf
+description=Reword verbs in-game
+tags=menu, entry
+plugins=com.ReVerb.ReVerbPlugin
