--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=ReVerb
 author=Wool Scarf
 description=Reword verbs in-game
-tags=menu, entry
+tags=menu, entry, change, phrase, word, text, verb, ReVerb
 plugins=com.ReVerb.ReVerbPlugin
