--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ shadowJar {
 	from sourceSets.test.output
 	configurations = [project.configurations.testRuntimeClasspath]
 	manifest {
-		attributes "Main-Class": "com.ReVerb.ReVerbTest"
+		attributes "Main-Class": "com.ReVerb.reverbtest"
 	}
 }
 
