--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=ReVerb
 author=Wool Scarf
 description=Reword verbs in-game
 tags=menu, entry, change, phrase, word, text, verb, ReVerb
-plugins=com.ReVerb.ReVerbPlugin
+plugins=com.reverb.reverb
