--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 }
 
-group = 'com.ReVerb'
+group = 'com.reverb'
 version = '1.0-SNAPSHOT'
 
 tasks.withType(JavaCompile) {
@@ -36,7 +36,7 @@ shadowJar {
 	from sourceSets.test.output
 	configurations = [project.configurations.testRuntimeClasspath]
 	manifest {
-		attributes "Main-Class": "com.ReVerb.reverbtest"
+		attributes "Main-Class": "com.reverb.reverbtest"
 	}
 }
 
